<resources>
    <string name="app_name">Nizara</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="msg_privacy_terms">I have read and agree to the Privacy Policy and Terms &amp; Conditions.</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_home">Home</string>
    <string name="cart">Cart</string>
    <string name="change_pass">Change Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="recover_pass">Continue</string>
    <string name="new_pass">New Password</string>
    <string name="msg_reset_pass_success">Your password reset successfully, please login with your password.</string>
    <string name="title_category">Category</string>
    <string name="title_fav">Wish List</string>
    <string name="title_cart">Cart</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="via">Via&#160;</string>
    <string name="cod">C.O.D.</string>
    <string name="faq">FAQ</string>
    <string name="logout">Logout</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="shop_by_seller">Shop by Seller</string>
    <string name="search">Search</string>
    <string name="no_category_found">No Category Found</string>
    <string name="no_seller_found">No Seller Found</string>
    <string name="view_all">View All</string>
    <string name="welcome">Welcome to&#160;</string>
    <string name="password_">Password</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="mobile_send_msg">We will send you an OTP on mobile number to verify. </string>
    <string name="please_type_verification_code_sent_to">Please Enter OTP sent via SMS on</string>
    <string name="personal_info">Personal Info</string>
    <string name="not_registered">Sign up</string>
    <string name="login">Log in</string>
    <string name="login_1">LOGIN</string>
    <string name="forgottext">Forgot password ?</string>
    <string name="forgot_message_hint">Registered mobile number</string>
    <string name="changepswtext">Change Password </string>
    <string name="old_pass">Old Password </string>
    <string name="reset_pass_text">Reset Your Password</string>
    <string name="changepsw">Change Password ?</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="confirm_order_amt">Confirm Order Amount</string>
    <string name="profile">Profile</string>
    <string name="refer">Referral Code (optional)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="alternate_mobile">Alternate Mobile No</string>
    <string name="select_city">Select City</string>
    <string name="select">Select</string>
    <string name="city_name">City Name</string>
    <string name="select_area">Select Area</string>
    <string name="address">Address</string>
    <string name="addresses">Addresses</string>
    <string name="pincode">PinCode</string>
    <string name="pincode_not_found">PinCode not found, try again!</string>
    <string name="is_login">Welcome Guest</string>
    <string name="is_mobile">Login&#160;/&#160;Register</string>
    <string name="next">NEXT</string>
    <string name="otp">Enter OTP</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="fav_text">Wish List</string>
    <string name="share_text">Share</string>
    <string name="similarproduct">Similar Products</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="msg_no_result">Sorry, no results found</string>
    <string name="msg_search_again">Please check the spelling or try a different word</string>
    <string name="limit_alert">Apologies, max product quantity limit reached.</string>
    <string name="deleteproductmsg">Are you sure, you want to remove this product from cart ?</string>
    <string name="delete_address_msg">Are you sure, you want to remove this address?</string>
    <string name="deleteproducttitle">Remove Product</string>
    <string name="delete_address">Remove Address</string>
    <string name="stock_limit">Oops! Limited stock available. </string>
    <string name="total_amt">Sub-total</string>
    <string name="items">Items Amount :</string>
    <string name="promo_applied">PromoCode Discount :</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_charge1">Delivery Charge :</string>
    <string name="free">Free Delivery</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="checkout">Checkout</string>
    <string name="update_location">Update Your Location</string>
    <string name="payment">Payment</string>
    <string name="current_location">Current Location</string>
    <string name="order_list">Order Summary</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="promo_code_msg">Have a Promo Code?</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="noitem_incart">Your cart is empty</string>
    <string name="noitem_incart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
    <string name="shop_now">Shop Now</string>
    <string name="filterby">Filter By</string>
    <string name="change_layout">Change Layout</string>
    <string name="payment_mathod">Payment Method</string>
    <string name="cod_pay">Cash On Delivery</string>
    <string name="pay_u_pay">PayU Money</string>
    <string name="paypal_pay">PayPal</string>
    <string name="paystack">Paystack</string>
    <string name="razor_payment">RazorPay</string>
    <string name="razor_pay">RazorPay</string>
    <string name="pay_u">PayUMoney</string>
    <string name="paypal">PayPal</string>
    <string name="resend">Resend OTP</string>
    <string name="verify_message">Verify your registered number and reset your password. </string>
    <string name="alert_not_register_num1">Mobile number is not registered on&#160;</string>
    <string name="alert_not_register_num2">. Please register to continue. Return to Log In screen and select Sign Up.</string>
    <string name="alert_register_num1">Mobile number already registered with&#160;</string>
    <string name="alert_register_num2">. You can sign into account using your credentials.</string>
    <string name="reset_alert_msg">Are you sure, you want to reset password?\nAfter changed password session will be logout.</string>
    <string name="verify_your_mobile">Verify Your Mobile Number</string>
    <string name="onlinepaytype">payumoney</string>
    <string name="codpaytype">cod</string>
    <string name="order_placed1">Order Placed!!</string>
    <string name="order_error">Error while payment!!</string>
    <string name="order_cancel">Cancel payment!!</string>
    <string name="wallet_recharged">Wallet Recharged!!</string>
    <string name="success_order">Your order has been placed!</string>
    <string name="summary">View All Orders</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total">Total :&#160;</string>
    <string name="order_success">Order Successfully Placed</string>
    <string name="txn_cancel_msg">Are you sure you want to cancel the transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="qty_1">Qty:&#160;</string>
    <string name="update_alert">Update Alert</string>
    <string name="up_location">Update Location</string>
    <string name="submit">Submit</string>
    <string name="update_msg_1">Update the app for a batter experience!</string>
    <string name="not_now">Not Now</string>
    <string name="update_now">Update</string>
    <string name="offer_price">Offer Price:&#160;</string>
    <string name="mrp">Price :&#160;</string>
    <string name="canceled_on">Order Cancelled On : &#160;</string>
    <string name="name_1">Name :&#160;</string>
    <string name="mobile_no_1">\nMobile No :&#160;</string>
    <string name="address_1">\nAddress :&#160;</string>
    <string name="total_">Total&#160;</string>
    <string name="noitem_intracker">You have not order yet</string>
    <string name="order_track_detail">Order Details</string>
    <string name="_title_order_track">Track Order</string>
    <string name="ordered_id">Ordered Id:&#160;</string>
    <string name="order_date">Order Date:&#160;</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="re_order">Re-Order!</string>
    <string name="cancel_item">Cancel Item</string>
    <string name="cancel">Cancel</string>
    <string name="no_track_msg">No Tracking Found..!</string>
    <string name="return_order">Return Item</string>
    <string name="quantity_tracking">Qty:</string>
    <string name="view_details">View Details</string>
    <string name="view_detail">View Detail</string>
    <string name="order_placed">Order\nPlaced</string>
    <string name="processed">Order\nProcessed</string>
    <string name="shipped">Order\nShipped</string>
    <string name="delivered">Order\nDelivered</string>
    <string name="other_details">Other Details</string>
    <string name="price_details">Price Detail</string>
    <string name="order_status">Order Status</string>
    <string name="cancel_order_detail">Cancel Order</string>
    <string name="cancel_msg">Are you sure, you want to cancel this item ?</string>
    <string name="reorder_msg">You want to re-order?\nAll products will be added to cart.</string>
    <string name="return_msg">Are you sure, you want to return this item ?</string>
    <string name="rate">Rate Us</string>
    <string name="notifications">Notifications</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="enter_mobile_no">Enter mobile number</string>
    <string name="enter_valid_mobile_no">Enter valid mobile number</string>
    <string name="enter_pass">Enter password</string>
    <string name="enter_old_pass">Enter old password</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_confirm_pass">Enter Confirm password</string>
    <string name="no_match_old_pass">Old password not matched</string>
    <string name="phone_no">Phone no.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="or">or</string>
    <string name="register">REGISTER</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="email_optional">Email (optional)</string>
    <string name="warning_banner">We provide 30 days money back guarantee\n Stay away from sellers fraud\n Do not order offline/ Order online only</string>
    <string name="continue_">Continue\n>></string>
</resources>