<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:clickable="true"
    android:focusable="true">


    <RelativeLayout
        android:id="@+id/lytChangeLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@color/quantum_yellow800">

        <TextView
            android:id="@+id/tvTitleLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:fontFamily="@font/open_sans_bold"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:text="@string/warning_banner"
            android:textAlignment="center"
            android:textColor="@color/txt_color" />


    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lytTotal"
        android:layout_below="@id/lytChangeLocation">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartrecycleview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/lyt_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10dp"
            tools:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintEnd_toEndOf="parent"
            tools:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txttotalitems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_semibold"
                android:padding="@dimen/dimen_5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_14sp" />

            <TextView
                android:id="@+id/txttotalamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans_semibold"
                android:padding="@dimen/dimen_5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvConfirmOrder"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_75sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/confirm_bg"
            android:backgroundTint="@color/quantum_orange"
            android:elevation="@dimen/dimen_5dp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/continue_"
            android:textAllCaps="true"
            android:textColor="@color/txt_color"
            tools:layout_constraintBottom_toBottomOf="parent"
            tools:layout_constraintEnd_toEndOf="parent"
            tools:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/lytempty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_emptycart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noitem_incart"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/noitem_incart_msg" />

        <Button
            android:id="@+id/btnShowNow"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="false"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/shop_now"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/mShimmerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        shimmer:shimmer_duration="1200">

        <!-- Adding rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/txtproductname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_22sdp"
                android:background="@color/background" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

            <include layout="@layout/simmer_cart_list" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

</RelativeLayout>